Theme Fixes (#10713)
* Make trash icon visible in high contrast

* Fix background color on selected checkbox in high contrast

* More high-contrast-y colors for common checkbox toggle

* Fix contrast of the selected item in monaco intellisense dropdown (it's a link and was getting overridden in HC mode by the generic link styling)

* Theme search icon and left-bar.

* Yucky workaround for preserving loading dimmer colors.

* Alternate workaround for loader. (Make default fully opaque so it never partially overlays the rest of the app, which is what made it look bad on other themes, then allow for overrides of non-loading dimmer and just override back to light-blue on micro:bit.)

* Fix github commit history theme

--- a/theme/color-themes/overrides/high-contrast-overrides.css
+++ b/theme/color-themes/overrides/high-contrast-overrides.css
@@ -9,6 +9,23 @@
     z-index: 1;
 }
 
+/* 
+ * Checkbox styles
+ * In HC the neutral and primary colors are the same, so we need to differentiate with
+ * a different background color when checked.
+ */
+.common-checkbox.toggle input:checked~label:before,
+div.field .ui.toggle.checkbox input:checked~label:before {
+    background-color: var(--pxt-colors-purple-background) !important;
+}
+
+/*
+ * Make toggle "handle" more visible for HC
+ */
+.common-checkbox.toggle label:after {
+    background-color: var(--pxt-neutral-foreground1) !important;
+}
+
 /*
  * Selection highlights
  */
@@ -77,4 +94,8 @@
 .pxtToolbox:not(.invertedToolbox) .blocklyTreeRow:not(.blocklyTreeSelected):hover,
 .pxtToolbox:not(.invertedToolbox) .blocklyTreeRow:not(.blocklyTreeSelected):focus {
     background-color: #404040;
+}
+
+.blocksEditorOuter #blocklyTrashIcon {
+    color: var(--pxt-primary-foreground);
 }
