--- a/theme/semantic-ui-overrides.less
+++ b/theme/semantic-ui-overrides.less
@@ -289,7 +289,7 @@ body.pxt-theme-root {
         }
     }
 
-    .ui.dimmer {
+    .ui.dimmer:not(#loading) {
         background-color: var(--pxt-neutral-alpha50);
     }
 
